Facilita_new_siteAtualiza landing do Facilita com nova VSL, imag.e preco

--- a/index.html
+++ b/index.html
@@ -1,183 +1,218 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Facilita Fluxo de Caixa PJ, MEI</title>
-  <meta
-    name="description"
-    content="Diagnóstico financeiro em menos de 2 minutos para PJ e MEI. Saiba se o caixa está saudável, em atenção ou em risco."
-  />
-  <link rel="stylesheet" href="./css/style.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Facilita Fluxo de Caixa PJ</title>
+    <meta
+      name="description"
+      content="Diagnóstico rápido do fluxo de caixa para PJ e MEI. Simples, rápido e resumido."
+    />
 
-<body>
-  <header class="topbar">
-    <div class="container topbar__inner">
-      <div class="brand">
-        <span class="brand__title">Facilita Fluxo de Caixa PJ</span>
-        <span class="brand__subtitle">Simples, rápido e resumido</span>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+
+  <body>
+    <header class="site-header">
+      <div class="container header-inner">
+        <div class="brand">
+          <span class="brand-title">Facilita Fluxo de Caixa PJ</span>
+          <span class="brand-sub">Simples, rápido e resumido</span>
+        </div>
+
+        <a class="btn btn-outline" href="#comprar">Comprar</a>
       </div>
+    </header>
 
-      <nav class="nav">
-        <a href="#como-funciona">Como funciona</a>
-        <a href="#vsl">Vídeo</a>
-        <a class="btn btn--small" href="https://pay.hotmart.com/T104122762T" target="_blank" rel="noopener">
-          Comprar agora
-        </a>
-      </nav>
-    </div>
-  </header>
+    <main>
+      <!-- HERO: VSL no topo -->
+      <section class="hero">
+        <div class="container hero-grid">
+          <div class="hero-copy">
+            <h1>Você trabalha, vende, mas não sabe para onde o dinheiro foi?</h1>
+            <p class="sub">
+              Em poucos minutos, entenda se o caixa do seu negócio está saudável,
+              em atenção ou em risco.
+            </p>
 
-  <main>
-    <section class="hero">
-      <div class="container hero__grid">
-        <div class="hero__content">
-          <h1>Saiba se o caixa do seu negócio está saudável ou em risco</h1>
-          <p class="lead">
-            Uma ferramenta prática para PJ e MEI, que gera um diagnóstico claro do seu fluxo de caixa
-            em menos de 2 minutos.
+            <div class="hero-badges">
+              <span class="badge">Para PJ e MEI</span>
+              <span class="badge">Diagnóstico em minutos</span>
+              <span class="badge">Acesso imediato</span>
+            </div>
+
+            <a class="btn btn-primary" href="#comprar">Quero resolver isso agora</a>
+            <div class="price-box">
+            <span class="price-product">Facilita Fluxo de Caixa PJ</span>
+
+            <span class="price-installments">
+            12 x de <strong>R$ 10,03</strong> *
+            </span>
+
+            <span class="price-cash">
+            Ou <strong>R$ 97,00</strong> à vista
+            </span>
+
+            <span class="price-note">
+            * Parcelamento no cartão • Pagamento seguro Hotmart
+            </span>
+            </div>
+
+            <p class="micro">
+              Você será direcionado para o checkout seguro da Hotmart.
+            </p>
+          </div>
+
+          <div class="hero-vsl">
+            <div class="vsl-wrap">
+              <vturb-smartplayer
+                id="vid-697e67b376ae9d6f4ddf8d0e"
+                style="display: block; margin: 0 auto; width: 100%;"
+              ></vturb-smartplayer>
+            </div>
+            <p class="vsl-note">
+              Assista ao vídeo e entenda como funciona em poucos minutos.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- PROVA / CONTEXTO: imagens abaixo da VSL -->
+      <section class="proof">
+        <div class="container">
+          <h2>Por que isso importa?</h2>
+          <p class="sub">
+            Muitos pequenos negócios fecham por falta de controle do caixa. Se o
+            dono não enxerga o número com clareza, decide no escuro.
           </p>
 
-          <div class="hero__cta">
-            <a class="btn" href="https://pay.hotmart.com/T104122762T" target="_blank" rel="noopener">
-              Acessar a página de pagamento
-            </a>
-            <a class="btn btn--ghost" href="#vsl">
-              Ver o vídeo primeiro
-            </a>
+          <div class="proof-grid">
+            <figure class="card">
+              <img
+                src="assets/images/facilita.png"
+                alt="Facilita Fluxo de Caixa PJ, exemplos de diagnóstico"
+              />
+              <figcaption>
+                Exemplo do diagnóstico do Facilita: saudável, atenção ou risco.
+              </figcaption>
+            </figure>
+
+            <figure class="card">
+              <img
+                src="assets/images/sebrae.png"
+                alt="Pesquisa com dado sobre fechamento de pequenas empresas e descontrole do caixa"
+              />
+              <figcaption>
+                Referência de mercado sobre a importância do controle financeiro.
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+      </section>
+
+      <!-- BENEFÍCIOS -->
+      <section class="benefits">
+        <div class="container">
+          <h2>O que você recebe</h2>
+
+          <div class="benefits-grid">
+            <div class="card">
+              <h3>Clareza imediata</h3>
+              <p>
+                Você insere poucos números e já entende a situação do caixa no
+                mês.
+              </p>
+            </div>
+
+            <div class="card">
+              <h3>Diagnóstico objetivo</h3>
+              <p>
+                Resultado claro com orientação simples para você agir no mesmo
+                dia.
+              </p>
+            </div>
+
+            <div class="card">
+              <h3>Para rotina real</h3>
+              <p>
+                Sem planilhas complexas, sem burocracia, sem depender de ninguém.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- CTA / COMPRA -->
+      <section class="cta" id="comprar">
+        <div class="container cta-box">
+          <div>
+            <h2>Pronto para ter clareza no seu caixa?</h2>
+            <p class="sub">
+              Clique no botão abaixo e finalize a compra na Hotmart.
+            </p>
           </div>
 
-          <ul class="bullets" aria-label="Benefícios">
-            <li>Leitura direta: saudável, em atenção ou em risco</li>
-            <li>Sem linguagem técnica e sem planilhas complicadas</li>
-            <li>Não substitui contador, é diagnóstico rápido</li>
-          </ul>
-        </div>
-
-        <div class="hero__media">
-          <img
-            src="./assets/banner_horizontal.png"
-            alt="Banner do Facilita Fluxo de Caixa PJ"
-            class="hero__img"
-          />
-        </div>
-      </div>
-    </section>
-
-    <section id="como-funciona" class="section">
-      <div class="container">
-        <h2>O que é, e o que não é</h2>
-
-        <div class="cards">
-          <article class="card">
-            <h3>O que é</h3>
-            <p>
-              Ferramenta prática de leitura de fluxo de caixa para pequenos empreendedores e autônomos,
-              com foco em clareza e objetividade.
-            </p>
-          </article>
-
-          <article class="card">
-            <h3>Objetivo</h3>
-            <p>
-              Oferecer clareza rápida sobre o caixa da empresa e apoiar decisões do dia a dia,
-              como controlar gastos e ajustar retiradas.
-            </p>
-          </article>
-
-          <article class="card">
-            <h3>O que não é</h3>
-            <p>
-              Não é curso de contabilidade e não substitui um contador profissional.
-              É um diagnóstico rápido e prático.
-            </p>
-          </article>
-        </div>
-      </div>
-    </section>
-
-<section id="vsl" class="section section--dark">
-  <div class="container">
-    <h2>Assista ao vídeo</h2>
-    <p class="muted">
-      👉 Você trabalha, vende… mas não sabe para onde o dinheiro foi?
-    </p>
-
-    <div class="video">
-      <div class="video__frame">
-
-        <vturb-smartplayer
-          id="vid-697b55a185e12e4f33112d4e"
-          style="display: block; margin: 0 auto; width: 100%;"
-        ></vturb-smartplayer>
-
-        <script type="text/javascript">
-          var s = document.createElement("script");
-          s.src = "https://scripts.converteai.net/7a2f2c75-9a37-4ad8-b060-7171f7f0bf22/players/697b55a185e12e4f33112d4e/v4/player.js";
-          s.async = true;
-          document.head.appendChild(s);
-        </script>
-
-      </div>
-    </div>
-
-    <div class="center" id="cta-compra">
-      <a
-        class="btn"
-        href="https://pay.hotmart.com/T104122762T"
-        target="_blank"
-        rel="noopener"
-      >
-        Quero comprar e ter acesso agora
-      </a>
-    </div>
-  </div>
-</section>
-
-
-    <section class="section">
-      <div class="container">
-        <h2>O que você informa na ferramenta</h2>
-
-        <div class="grid-2">
-          <ul class="checklist">
-            <li>Faturamento mensal e receitas do período</li>
-            <li>Custos e despesas, gastos operacionais</li>
-            <li>Retiradas pessoais, pró-labore</li>
-            <li>Compromissos financeiros, dívidas e obrigações</li>
-          </ul>
-
-          <div class="box">
-            <h3>Resultado</h3>
-            <p>
-              A ferramenta indica se o caixa está saudável, em atenção ou em risco,
-              para apoiar decisões práticas com mais clareza.
-            </p>
-            <p class="muted">
-              Importante: não substitui aconselhamento profissional individual.
+          <div class="cta-actions">
+            <a
+              class="btn btn-primary btn-lg"
+              href="https://pay.hotmart.com/T104122762T"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Comprar agora na Hotmart
+            </a>
+            <p class="micro">
+              Pagamento seguro, acesso imediato e garantia Hotmart.
             </p>
           </div>
         </div>
-      </div>
-    </section>
-  </main>
+      </section>
 
-  <footer class="footer">
-    <div class="container footer__inner">
-      <div>
-        <strong>Suporte</strong>
-        <p class="muted">contato@toledoalexandre.com.br</p>
-      </div>
+      <!-- FAQ curto -->
+      <section class="faq">
+        <div class="container">
+          <h2>Dúvidas rápidas</h2>
 
-      <div class="footer__links">
-        <a href="#como-funciona">Como funciona</a>
-        <a href="#vsl">Vídeo</a>
-        <a href="https://pay.hotmart.com/T104122762T" target="_blank" rel="noopener">Comprar</a>
-      </div>
-    </div>
-  </footer>
+          <div class="faq-grid">
+            <div class="card">
+              <h3>Serve para MEI?</h3>
+              <p>Sim. Funciona para MEI, autônomos e pequenos negócios.</p>
+            </div>
 
-  <script src="./js/script.js"></script>
-</body>
+            <div class="card">
+              <h3>Preciso saber finanças?</h3>
+              <p>Não. A ideia é ser simples, direto e prático.</p>
+            </div>
+
+            <div class="card">
+              <h3>Como recebo o acesso?</h3>
+              <p>Após a compra, a Hotmart libera o acesso automaticamente.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="site-footer">
+      <div class="container footer-inner">
+        <p>© <span id="year"></span> Facilita Fluxo de Caixa PJ</p>
+        <p class="micro">
+          Este site não é afiliado ao Facebook ou ao Instagram.
+        </p>
+      </div>
+    </footer>
+
+    <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
+
+    <!-- VTurb Player Script -->
+    <script type="text/javascript">
+      var s = document.createElement("script");
+      s.src =
+        "https://scripts.converteai.net/7a2f2c75-9a37-4ad8-b060-7171f7f0bf22/players/697e67b376ae9d6f4ddf8d0e/v4/player.js";
+      s.async = !0;
+      document.head.appendChild(s);
+    </script>
+  </body>
 </html>
