--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       padding: 8px 12px;
       border-radius: 999px;
       border: 1px solid rgba(255,255,255,.10);
-      background: rgba(16, 185, 129, .10);
-      color: rgba(255,255,255,.92);
+      background: #166534;
+      color: #ffffff;
       font-weight: 700;
       font-size: 12px;
     }
